chore(rabbitmq): change storageClassName to ssd

--- a/k8s/rabbitmq/manifest/manifests.yaml.template
+++ b/k8s/rabbitmq/manifest/manifests.yaml.template
@@ -152,7 +152,7 @@ spec:
     spec:
       accessModes:
       - ReadWriteOnce
-      storageClassName: standard
+      storageClassName: ssd
       resources:
         requests:
           storage: 5Gi
